# Tec-Media-File-System

./: CMakeLists.txt  Prueba Branch  controllernode  main.cpp  tecmfsdisk
Cliente/: cliente.cpp  cliente.h
File_Handling/: FileHandler.cpp  FileHandler.h
ImageProcessing/: Processing.cpp  Processing.h
Server/: ControllerNode.cpp
TECMFS-DISK/: TECMFS-DISK-main.cpp
ceRobot/: ceRobot-main.cpp
